--- a/src/content/docs/tools/libraries/backend/kethereum.mdx
+++ b/src/content/docs/tools/libraries/backend/kethereum.mdx
@@ -2,8 +2,7 @@
 title: Kethreum
 description: Intro to Kethreum
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Kethereum is a Kotlin library created for Ethereum. It opts for a non-monolithic structure, empowering users to selectively integrate modules and thereby maintain a lean library footprint."
