--- a/src/content/docs/tools/libraries/mobile/web3dart.mdx
+++ b/src/content/docs/tools/libraries/mobile/web3dart.mdx
@@ -3,7 +3,7 @@ title: Web3Dart
 description: Intro to Web3Dart
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
 	introParagraph="Library written in dart that enables interaction with EVM compatible blockchains."
