--- a/src/content/docs/tools/libraries/web/skalejs.mdx
+++ b/src/content/docs/tools/libraries/web/skalejs.mdx
@@ -3,7 +3,7 @@ title: SKALE.js
 description: Intro to SKALE.js
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 (Maybe move to SKALE folder or under SKALE libraries)
 
