--- a/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
+++ b/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
@@ -2,8 +2,7 @@
 title: Wallet Connect
 description: Intro to Wallet Connect
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="The Wallet Connect is an open source protocol to link dApps to mobile wallets using deep linking, and allows you to integrate your dApp with SKALE."
