--- a/src/content/docs/tools/wallets/custodial/invisible-signer.mdx
+++ b/src/content/docs/tools/wallets/custodial/invisible-signer.mdx
@@ -2,8 +2,7 @@
 title: Invisible Signers
 description: Intro to Invisible Signers
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Thanks to the zero gas fees nature of the SKALE chains projects can perform transactions on behalf of the users without compromising the company sustainability by covering huge gas fees costs. In order to achieve the described above, the application can generate on the background a wallet for each user, distribute the free gas token to it and store it on the backend."
