--- a/src/content/docs/tools/wallets/mpc/web3auth.mdx
+++ b/src/content/docs/tools/wallets/mpc/web3auth.mdx
@@ -2,8 +2,7 @@
 title: Web3Auth
 description: Intro to Web3Auth
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Pluggable wallet infrastructure for Web3 wallets and applications. It streamlines the onboarding of both mainstream and crypto native users in under a minute by providing experiences that they're most comfortable with."
