--- a/src/content/docs/tools/wallets/non-custodial/enkrypt.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/enkrypt.mdx
@@ -3,7 +3,7 @@ title: Enkrypt
 description: Intro to Enkrypt
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="The Enkrypt wallet is a multichain non-custodial wallet allowing users to easily manage tokens and access web3 application across multiple blockchains, like SKALE Network."
