--- a/src/content/docs/tools/wallets/non-custodial/ledger.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/ledger.mdx
@@ -2,8 +2,7 @@
 title: Ledger
 description: Intro to Ledger
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies."
