--- a/src/content/docs/tools/wallets/non-custodial/metamask.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/metamask.mdx
@@ -2,8 +2,7 @@
 title: MetaMask
 description: Intro to MetaMask
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Metamask is a Chromium (Chrome, Brave, and Edge) and Firefox browser add-on that provides a non-custodial Ethereum wallet. An end-user's private key is stored in an encrypted Vault data stored in the browser."
