--- a/src/content/docs/tools/libraries/backend/web3j.mdx
+++ b/src/content/docs/tools/libraries/backend/web3j.mdx
@@ -3,7 +3,7 @@ title: Web3j
 description: Intro to Web3j
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
 	introParagraph="Web3j is a modular, reactive, type safe Java and Android library for working with Smart Contracts and integrating with clients (nodes) on the Ethereum network."
