--- a/src/content/docs/tools/libraries/mobile/web3swift.mdx
+++ b/src/content/docs/tools/libraries/mobile/web3swift.mdx
@@ -3,7 +3,7 @@ title: Web3Swift
 description: Intro to Web3Swift
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="This library implements the web3.js library in Swift. It enables interaction with EVM compatible blockchains."
