--- a/src/content/docs/tools/libraries/web/ethersv5.mdx
+++ b/src/content/docs/tools/libraries/web/ethersv5.mdx
@@ -3,7 +3,7 @@ title: EthersV5
 description: Intro to EthersV5
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="The ethers.js library is a comprehensive and concise library for engaging with the Ethereum Blockchain and its surrounding ecosystem."
