--- a/src/content/docs/tools/libraries/web/viem.mdx
+++ b/src/content/docs/tools/libraries/web/viem.mdx
@@ -3,7 +3,7 @@ title: Viem
 description: Intro to Viem
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Viem is a TypeScript interface for Ethereum that provides low-level stateless primitives for interacting with Ethereum."
