--- a/src/content/docs/tools/libraries/web/web3js.mdx
+++ b/src/content/docs/tools/libraries/web/web3js.mdx
@@ -3,7 +3,7 @@ title: Web3.js
 description: Intro to Web3.js
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Set of Javascript libraries enabling interaction with a local or remote Ethereum node through HTTP, IPC, or WebSocket protocols."
