--- a/src/content/docs/tools/wallets/aggregator.mdx
+++ b/src/content/docs/tools/wallets/aggregator.mdx
@@ -3,44 +3,11 @@ title: Wallets Aggregator
 description: Intro to Wallets Aggregator
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import {Content as WalletConnect} from './aggregator/wallet-connect.mdx';
 
 
 <Tabs>
 <TabItem label="Wallet Connect">
-<ToolLayout
-    introParagraph="The Wallet Connect is an open source protocol to link dApps to mobile wallets using deep linking, and allows you to integrate your dApp with SKALE."
-    toolName="Wallet Connect"
-    toolLink="https://docs.walletconnect.com/getting-started"
-    toolDocsLink="https://docs.walletconnect.com/getting-started"
->
-
-## Implemention Example
-
-```shell
-npm install --save web3 @walletconnect/web3-provider
-```
-
-```javascript
-import WalletConnectProvider from "@walletconnect/web3-provider";
-import Web3 from 'web3';
-
-
-// Your setup information
-const endpoint = 'https://your.skale.endpoint';             // your SKALE Chain endpoint
-const ethereumEndpoint = 'https://your.ethereum.endpoint'   // your Ethereum endpoint
-const skaleChainId = 123456                                 // chainId of your SKALE Chain
-
-const provider = new WalletConnectProvider({
-    rpc: {
-      skaleChainId: endpoint,
-      4: ethereumEndpoint
-    }
-  });
-  await provider.enable();
-  const web3 = new Web3(provider);
-```
-
-</ToolLayout>
+<WalletConnect/>
 </TabItem>
 </Tabs>
