--- a/src/content/docs/tools/wallets/custodial/stardust.mdx
+++ b/src/content/docs/tools/wallets/custodial/stardust.mdx
@@ -2,8 +2,7 @@
 title: Stardust
 description: Intro to Stardust
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Stardust solution allows developers to quickly create custodial wallets, manage their NFTs, and monetize their collections on a robust marketplace."
