--- a/src/content/docs/tools/wallets/mpc/moon.mdx
+++ b/src/content/docs/tools/wallets/mpc/moon.mdx
@@ -2,8 +2,7 @@
 title: Moon
 description: Intro to Moon
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph=""
