--- a/src/content/docs/tools/wallets/mpc/thirdweb.mdx
+++ b/src/content/docs/tools/wallets/mpc/thirdweb.mdx
@@ -3,7 +3,7 @@ title: Thirdweb
 description: Intro to 
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Thirdweb provides a wallet solution that can accomodate different needs. Their connect wallet UI allows connecting with the common industry wallets (ex: Metamask, Coinbase, WalletConnect) as well as creating an MPC wallet with solcial logins."
