--- a/src/content/docs/tools/wallets/non-custodial/bitski.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/bitski.mdx
@@ -2,8 +2,7 @@
 title: Bitski
 description: Intro to Bitski
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Bitski is a non-custodial OAuth-based Web3 wallet SDK. The Bitski SDK allows you to integrate your dApp with SKALE."
