--- a/src/content/docs/tools/wallets/non-custodial/coinbase.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/coinbase.mdx
@@ -2,8 +2,7 @@
 title: Coinbase
 description: Intro to Coinbase
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Coinbase Wallet is a self-custody crypto wallet, available as a browser extension and a mobile app on Android and iOS"
