--- a/src/content/docs/tools/wallets/non-custodial/portis.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/portis.mdx
@@ -2,8 +2,7 @@
 title: Portis
 description: Intro to Portis
 ---
-import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="Portis is a non-custodial Web3 wallet SDK supported by a variety of `evergreen` browsers. The Portis SDK allows you to integrate your dApp with SKALE."
